--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-    "name": "xalstudio-dev",
-    "version": "0.0.1",
-    "scripts": {
-        "dev": "next",
-        "build": "next build",
-        "start": "next start"
-    },
-    "dependencies": {
-        "gray-matter": "4.0.2",
-        "next": "latest",
-        "react": "^16.13.0",
-        "react-dom": "^16.13.0",
-        "react-highlight": "^0.12.0",
-        "react-markdown": "^4.3.1",
-        "tailwindcss": "^1.6.2"
-    },
-    "devDependencies": {
-        "eslint": "^7.6.0",
-        "postcss-font-magician": "^2.3.1",
-        "postcss-loader": "^3.0.0",
-        "postcss-preset-env": "^6.7.0",
-        "prettier": "^2.0.5",
-        "tailwindcss": "^1.6.2"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "gray-matter": "^4.0.3",
+    "next": "latest",
+    "next-mdx-remote": "^3.0.4",
+    "prismjs": "^1.24.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "remark-prism": "^1.3.6"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.19",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5",
+    "tailwindcss": "^2.2.4",
+    "typescript": "^4.3.5"
+  }
 }
