--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "gray-matter": "^4.0.3",
-    "next": "latest",
-    "next-mdx-remote": "^3.0.4",
-    "prismjs": "^1.24.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "remark-prism": "^1.3.6"
-  },
-  "devDependencies": {
-    "@types/react": "^17.0.19",
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4",
-    "typescript": "^4.3.5"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "deploy": "next build && next export && git add -f out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages"
+    },
+    "dependencies": {
+        "gray-matter": "^4.0.3",
+        "next": "latest",
+        "next-mdx-remote": "^3.0.4",
+        "prismjs": "^1.24.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "remark-prism": "^1.3.6"
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.19",
+        "autoprefixer": "^10.2.6",
+        "postcss": "^8.3.5",
+        "tailwindcss": "^2.2.4",
+        "typescript": "^4.3.5"
+    }
 }
