--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "deploy": "next build && next export && git add -f out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages"
+        "deploy": "next build && next export -o docs && echo 'alexprisacariu.dev' > docs/CNAME"
     },
     "dependencies": {
         "gray-matter": "^4.0.3",
