--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "deploy": "next build && next export -o docs && echo 'alexprisacariu.dev' > docs/CNAME"
+        "deploy": "next build && next export -o docs && echo 'alexprisacariu.dev' > docs/CNAME && touch docs/.nojekyll"
     },
     "dependencies": {
         "gray-matter": "^4.0.3",
