--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "deploy": "next build && next export -o docs && echo 'alexprisacariu.dev' > docs/CNAME && touch docs/.nojekyll"
     },
     "dependencies": {
+        "classnames": "^2.3.1",
         "gray-matter": "^4.0.3",
         "next": "latest",
         "next-mdx-remote": "^3.0.4",
@@ -16,6 +17,7 @@
         "remark-prism": "^1.3.6"
     },
     "devDependencies": {
+        "@types/node": "^17.0.17",
         "@types/react": "^17.0.19",
         "autoprefixer": "^10.2.6",
         "postcss": "^8.3.5",
