--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "scripts": {
         "dev": "next dev",
         "build": "next build",
-        "start": "next start",
+        "start": "next dev --port=15000",
         "deploy": "next build && next export -o docs && echo 'alexprisacariu.dev' > docs/CNAME && touch docs/.nojekyll"
     },
     "dependencies": {
@@ -17,6 +17,7 @@
         "remark-prism": "^1.3.6"
     },
     "devDependencies": {
+        "@svgr/webpack": "^6.2.1",
         "@types/node": "^17.0.17",
         "@types/react": "^17.0.19",
         "autoprefixer": "^10.2.6",
