--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
     "scripts": {
         "build": "next build",
         "dev": "next dev --port=15010",
-        "deploy": "npm run build && next export -o docs && echo 'alexprisacariu.dev' > docs/CNAME && touch docs/.nojekyll"
+        "deploy": "npm run build && echo 'alexprisacariu.dev' > docs/CNAME && touch docs/.nojekyll"
     },
     "dependencies": {
-        "classnames": "^2.3.1",
+        "classnames": "^2.3.2",
         "gray-matter": "^4.0.3",
-        "next": "latest",
-        "next-mdx-remote": "^4.0.3",
+        "next": "^13.5.5",
+        "next-mdx-remote": "^4.4.1",
         "nextjs-progressbar": "^0.0.14",
-        "prismjs": "^1.24.1",
+        "prismjs": "^1.29.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "remark-prism": "^1.3.6"
     },
     "devDependencies": {
-        "@svgr/webpack": "^6.2.1",
-        "@types/node": "^18.0.3",
-        "@types/react": "^18.0.15",
-        "autoprefixer": "^10.2.6",
+        "@svgr/webpack": "^6.5.1",
+        "@types/node": "^18.18.5",
+        "@types/react": "^18.2.28",
+        "autoprefixer": "^10.4.16",
         "postcss": "^8.3.5",
-        "tailwindcss": "^3.1.5",
-        "typescript": "^4.3.5"
+        "tailwindcss": "^3.3.3",
+        "typescript": "^4.9.5"
     }
 }
