--- a/docs/server/pages-manifest.json
+++ b/docs/server/pages-manifest.json
@@ -2,6 +2,7 @@
   "/_app": "pages/_app.js",
   "/_error": "pages/_error.js",
   "/_document": "pages/_document.js",
+  "/": "pages/index.js",
   "/posts/[dirName]": "pages/posts/[dirName].js",
-  "/": "pages/index.js"
+  "/blog/[pageNumber]": "pages/blog/[pageNumber].js"
 }
