--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "2.2.0",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "@biomejs/biome": "2.2.0"
+    "tailwindcss": "^4"
   }
 }
