--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "motion": "^12.23.24",
     "next": "15.5.6",
     "react": "19.1.0",
