--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "clsx": "^2.1.1",
+    "gray-matter": "^4.0.3",
     "motion": "^12.23.24",
     "next": "15.5.6",
     "next-mdx-remote-client": "^2.1.7",
