--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@shikijs/rehype": "^3.15.0",
+    "@shikijs/transformers": "^3.15.0",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "motion": "^12.23.24",
     "next": "15.5.6",
     "next-mdx-remote-client": "^2.1.7",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.1",
+    "shiki": "^3.15.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
